--- a/pages/doencas/index.html
+++ b/pages/doencas/index.html
@@ -55,9 +55,14 @@
     </div>
     <div class="submain2">
         <div class="text2">
-            <p>O sedentarismo é a ausência de exercícios físicos de forma regular. E um fator de risco para doenças coronárias, cujo no Brasil, dados do Ministério da Saúde estimam 350 mil mortes anuais por problemas ligados ao coração. Segundo a Organização Mundial da Saúde (OMS), o sedentarismo é considerado o quarto maior fator de risco de mortes no mundo. A recomendação padrão da Organização Mundial da Saúde (OMS) é de praticar, ao menos, duas horas e meia de esforço moderado por semana ou 75 minutos de atividade intensa.</p>
-            <p>A falta de atividade física na rotina pode ser causa de muitas doenças, entre elas, podemos destacar: Obesidade, Problemas cardiovasculares (Infarto ou AVC), Aumento do colesterol, Atrofia muscular, Aumento da pressão arterial, Problemas articulares, Diabetes tipo 2 e Distúrbios do sono.</p>
-            <p>Depois de 12 semanas, o organismo já começa a sentir efeitos positivos da prática de atividade física realizada de 30 a 60 minutos por dia, na frequência de cinco vezes por semana. Para sair do sedentarismo é importante realizar: Fazer um check up com seu médico cardiologista para uma avaliação clínica, fazer avaliação física com profissional de educação física, começar devagar, com atividade leve a moderada, ficar atento às limitações do próprio corpo, fazer alongamento e aquecimento, manter-se hidratado e manter uma alimentação saudável e equilibrada.</p>
+            <p>O sedentarismo, caracterizado pela falta de atividade física regular, é um relevante fator de risco para doenças coronárias. No Brasil, estima-se que 350 mil mortes anuais estejam relacionadas a problemas cardíacos. A Organização Mundial da Saúde (OMS) o considera o quarto maior fator de risco de mortes globalmente. Recomenda-se, conforme padrões da OMS, pelo menos duas horas e meia de exercício moderado por semana ou 75 minutos de atividade intensa.</p>
+            <p>A ausência de atividade física pode contribuir para diversas doenças, incluindo obesidade, problemas cardiovasculares, aumento do colesterol, atrofia muscular, hipertensão, problemas articulares, diabetes tipo 2 e distúrbios do sono. Após 12 semanas de prática regular de 30 a 60 minutos por dia, cinco vezes por semana, o organismo já demonstra efeitos positivos.</p>
+            <p>Para combater o sedentarismo, é crucial realizar avaliações médicas e físicas, começar gradualmente, respeitar os limites do corpo, praticar alongamentos e aquecimentos, manter-se hidratado e adotar uma alimentação saudável e equilibrada.</p>
+
+
+
+
+
         </div>
         <div class="text3">
             <h1>Exercícios para evitar o sedentarismo</h1>
